<resources>
    <string name="app_name">Person Data List</string>
    <string name="lista">List\t</string>
    <string name="alta_nueva_persona">" New Person"</string>
    <string name="salir">Exit</string>
    <string name="persona">Person</string>
    <string name="nombres">Names:</string>
    <string name="apellidos">Last Name:</string>
    <string name="apellidosContacto">Contact Last Name</string>
    <string name="edad">Age:</string>
    <string name="edadContacto">Contact Age</string>
    <string name="telefono">Phone Number:</string>
    <string name="telefonoContacto">Contact Phone Number:</string>
    <string name="permisoConducir">Driving License:</string>
    <string name="si">Yes</string>
    <string name="nivelIngles">English Level:</string>
    <string name="bajo">Low</string>
    <string name="medio">Medium</string>
    <string name="alto">High</string>
    <string name="fechaAlta">Registration Date</string>
    <string name="enviar">Send</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombreContacto">Contact Name</string>
    <string name="CambiarFecha">Change Date</string>
    <string name="alumno">Student</string>
    <string name="elementos_en_lista">Items in List:</string>
    <string name="adicionar_persona">Add Person</string>
    <string name="iniciar">Start</string>
    <string name="lista_de_personas">Person Data List</string>
    <string name="segunda_linea">Second Line</string>
    <string name="tercera_linea">Third Line</string>
    <string name="reset">Reset</string>
    <string name="preg_borrar_registro">" Do you want to delete this record?"</string>
    <string name="borrar">Delete</string>
    <string name="total_personas">"Total People "</string>
    <string name="eliminado">Removed</string>
    <string name="accion_cancelada">Canceled Action</string>
</resources>