<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_third">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/persona"
        android:background="@color/design_default_color_primary"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/sv1"
        android:layout_below="@id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:textSize="20sp"
                android:text="@string/nombres"
                android:textAlignment="gravity"
                />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNombre"
                android:inputType="text"
                android:hint="@string/nombreContacto"
                />

            <TextView
                android:id="@+id/tvApellido"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:textSize="20sp"
                android:layout_below="@+id/etNombre"
                android:text="@string/apellidos"
                android:textAlignment="textStart"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/etApellido"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvApellido"
                android:inputType="textCapWords"
                android:hint="@string/apellidosContacto" />

            <TextView
                android:id="@+id/tvEdad"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/etApellido"
                android:text="@string/edad"
                android:textAlignment="textStart" />
            <EditText
                android:id="@+id/etEdad"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEdad"
                android:inputType="number"
                android:hint="@string/edadContacto" />

            <TextView
                android:id="@+id/tvTelefono"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/etEdad"
                android:text="@string/telefono"
                android:textAlignment="textStart" />
            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTelefono"
                android:inputType="textCapWords"
                android:hint="@string/telefonoContacto" />

            <LinearLayout
                android:id="@+id/lyPermisoConducir"
                android:layout_below="@id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/tvPermisoConducir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/permisoConducir"
                    android:textAlignment="textStart" />
                <CheckBox
                    android:id="@+id/ckPermisoConducir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/si"
                    />

            </LinearLayout>


            <TextView
                android:id="@+id/tvNvlIngles"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/lyPermisoConducir"
                android:text="@string/nivelIngles"
                android:textAlignment="textStart" />
            <RadioGroup
                android:id="@+id/rbtGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNvlIngles"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbBajo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bajo"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rbMedio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medio"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rbAlto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alto"
                    android:textSize="20sp" />
            </RadioGroup>
            <LinearLayout
                android:id="@+id/lyFecha"
                android:layout_below="@id/rbtGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/tvFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/fechaAlta"
                    android:textAlignment="textStart" />
                <EditText
                    android:id="@+id/etFecha"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="textCapWords" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/lyCambiarFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_below="@id/lyFecha">

                <Button
                    android:id="@+id/btnFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="openDialogDatePicker"
                    android:text="@string/CambiarFecha"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyAcciones"
                android:layout_below="@id/lyCambiarFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:onClick="reset"
                    android:text="@string/reset"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnEnviar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:onClick="enviar"
                    android:text="@string/enviar"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:onClick="cancelar"
                    android:text="@string/cancelar"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>